--- a/src/views/layouts/layout.pug
+++ b/src/views/layouts/layout.pug
@@ -8,7 +8,8 @@ html:5
 		meta(name='description' content='Knochenmarks Portfolio')
 		meta(name='viewport' content='width=device-width, initial-scale=1.0')
 		link(rel='stylesheet', href='assets/css/main.css')
-
+		script(async src='src/js/libs/d3.min.js')
+		script(async src='src/js/libs/jquery-3.1.1.js')
 	body
 
 		//- Header
@@ -20,4 +21,4 @@ html:5
 		//- //- Footer
 		//- include ../includes/footer
 
-		script(async src='assets/js/main.js')
+		script(async src='assets/js/bundle.js')
