--- a/src/views/includes/pages.pug
+++ b/src/views/includes/pages.pug
@@ -24,38 +24,38 @@ aside(class="vertical-sidebar")
     .vertical-menu
       nav.home-navigation
         .nav-item
-          a(href="#home") Home
+          a(href="#home" data-i18n="nav:home") Home
         .nav-item
-          a(href="#projects") Projects
+          a(href="#projects" data-i18n="nav:projects") Projects
         .nav-item
-          a(href="#about") About Me
+          a(href="#about" data-i18n="nav:aboutMe") About Me
         .nav-item
-          a(href="#contact") Contact
+          a(href="#contact" data-i18n="nav:contact") Contact
     .vertical-social
       .icon
-        a(href="https://github.com/Knochenmark")
+        a(href="https://github.com/Knochenmark" title="github")
           include ../svg/github.svg
       .icon.codepen
-        a(href="https://codepen.io/Knochenmark")
+        a(href="https://codepen.io/Knochenmark" title="codepen")
           include ../svg/codepen.svg
 section(id="projects")
   article
-    h1 Projects
+    h1(data-i18n="nav:projects") Projects
     .project-list
       //- projects is part of the data object that is passed to the pug files. See "data.json"
       each project in projects
         +project(project)
 section(id="about")
   article
-    h1 About Me
+    h1(data-i18n="nav:aboutMe") About Me
     p.
       Hi, I'm Mark! You know what I love most about my portfolio? It's about me. You might think #[span(class="whois") "Who's this self-absorbed guy?"]. Well, thanks for this question, but I'll answer another question first. Yes, I'm good at what I do and when you love yourself, you can't help but love your craft. I like things functional and minimalistic. That's me in a nutshell. If you dont like my stuff, build your own playground, but if you enjoyed it and want to know more, just drop me a line. - Mark
 section(id="contact")
   article
-    h2 Thanks for coming by!
-    .contact-content I’m always open for a chat so feel free to contact me.
+    h2(data-i18n="contact:thanks") Thanks for coming by!
+    .contact-content(data-i18n="contact:text") I’m always open for a chat so feel free to contact me.
     .email
-      span Say hi
+      span(data-i18n="contact:sayHi") Say hi
       a(href="mailto:marktodd.hl@gmail.com") marktodd.hl@gmail.com
 //- Footer
 include ../includes/footer
